udemy/initpod.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: init-pod
  name: init-pod
spec:
  containers:
  - image: nginx:1.19.1
    name: init-pod
    ports:
    - containerPort: 80
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
