udemy/multi-pod.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: multi-pod
  name: multi-pod
spec:
  volumes: 
  - name: temp-vol
    emptyDir: {}
  containers:
  - image: redis
    name: redis
    resources: {}
  - image: memcached
    name: memcached
    resources: {}
  - image: nginx
    name: nginx
    volumeMounts:
    - name: temp-vol
      mountPath: /var/data
    resources: {}
  - image: mysql
    name: mysql
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
