udemy/multipod.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx
  name: init-container-nginx
spec:
  volumes:
  - name: multi-volu
    emptyDir: {}
  containers:
  - image: nginx
    name: nginx
    resources: {}
    volumeMounts:
    - name: multi-volu
      mountPath: /output
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
