udemy/pod-cm.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: webservice
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: web
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: web
  name: web
spec:
  volumes:
  - name: config-volume
    configMap:
      name: my-cm
  containers:
  - image: nginx
    name: web
    ports:
    - containerPort: 80
    volumeMounts:
    - name: config-volume
      mountPath: /etc/config
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
