udemy/netpol.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      run: nginx
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from: 
    - podSelector:
      matchLabels:
        service: my-service
  podSelector:
    matchLabels:
      run: nginx
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from: 
    - podSelector:
      matchLabels:
        service: my-service
